set backgroundDiv z-index as non-negative; fix SOME z-indices to be larger

--- a/src/client/site/Pages/Music/styles.less
+++ b/src/client/site/Pages/Music/styles.less
@@ -54,7 +54,7 @@ iframe {
   height: 60px;
   background-color: #333;
   box-shadow: 0 0 30px rgba( 0,0,0,0.6 );
-  z-index: 1;
+  z-index: 2;
   opacity: 0.8;
   border-radius: 6px;
 }
