--- a/src/client/site/Pages/styles.less
+++ b/src/client/site/Pages/styles.less
@@ -24,7 +24,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 // https://stackoverflow.com/questions/19038240/media-query-styles-not-overriding-original-styles
