--- a/src/client/site/Static/MenuBar/styles.less
+++ b/src/client/site/Static/MenuBar/styles.less
@@ -6,11 +6,13 @@
 #menuBar {
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   width: @menu-width-mobile;
 }
 
 #menuIcon {
+  position: relative;
+  z-index: 2;
   width: 2em;
   height: 2em;
   -webkit-transition: transform 0.5s;
